# hbackup

./: .bzrignore  CHANGES  Makefile  Makefile.am  README  TODO  acinclude.m4  backup.cc  backup.chymax  backup.curator  backup.kakajou  backup.lyonesse  backup.sfere  backup.sfere-music  cleanup.cc  configure.ac  exceptions.cc  exclude.cc  file.cc  filesystem.cc  globals.cc  hash.cc  hbackup  hbackup.1  hbackup.sh  local.cc  makedefs.Darwin  makedefs.FreeBSD  makedefs.Linux  makedefs.mingw  makedefs.unix  nhbackup.cc  nhbackup.h  openssh.patch  prepare  rbackup.chymax  rbackup.iset  rbackup.kakajou  rbackup.lyonesse  rbackup.sfere  (+11 more)
ChangeLog.d/: hbackup--mainline--0
debian/: changelog  control  copyright  rules
scripts/: dist  setversion
